--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
+		<!--JSON转换-->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.83</version>
+		</dependency>
 		<!--jwt工具包-->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
